force-app/main/default/objects/Case/fields/FEC_Completed_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_Completed_User__c</fullName>
    <description>Hiển thị id của user đã hoàn thành Case</description>
    <label>Completed User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>