force-app/main/default/objects/Case/fields/FEC_Confirm_CS_CC_Assessment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Confirm_CS_CC_Assessment__c</fullName>
    <description>Xác nhận đối với đánh giá của CS CC</description>
    <label>Confirm CS CC Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Confirm_Assessment</valueSetName>
    </valueSet>
</CustomField>