force-app/main/default/objects/Case/fields/FEC_Confirm_RD_CO_Assessment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Confirm_RD_CO_Assessment__c</fullName>
    <description>Xác nhận đối với đánh giá yêu cầu của RD CO</description>
    <label>Confirm RD CO Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Confirm_Assessment</valueSetName>
    </valueSet>
</CustomField>