force-app/main/default/objects/Case/fields/FEC_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>