force-app/main/default/objects/Case/fields/FEC_Contract_Processing_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contract_Processing_Assessment_Type__c</fullName>
    <label>Contract Processing Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>