force-app/main/default/objects/Case/fields/FEC_Contract_Processing_MRC_Assessment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contract_Processing_MRC_Assessment__c</fullName>
    <label>Contract Processing MRC Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can return MRC</fullName>
            </value>
            <value>
                <fullName>Cannot return MRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>