force-app/main/default/objects/Case/fields/FEC_Conversion_Fee__c.field-meta.xml
<CustomField>
    <fullName>FEC_Conversion_Fee__c</fullName>
    <description>Service API GetIPPDetails trả về dữ liệu phí chuyển đổi cho khoản IPP. User không thể thao tác thay đổi field.</description>
    <label>Conversion Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>