force-app/main/default/objects/Case/fields/FEC_Correct_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Correct_Contract_Number__c</fullName>
    <description>Số hợp đồng đúng. Hiển thị gợi ý tất cả số HĐ/ TK của KH tại FEC để User chọn 1 (kể cả số HĐ đã chọn ở mục Incorrect Contract Number).</description>
    <label>Correct Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>