force-app/main/default/objects/Case/fields/FEC_Country__c.field-meta.xml
<CustomField>
    <fullName>FEC_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Name</label>
    <referenceTo>FEC_Country__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>