force-app/main/default/objects/Case/fields/FEC_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>