force-app/main/default/objects/Case/fields/FEC_Created_by__c.field-meta.xml
<CustomField>
    <fullName>FEC_Created_by__c</fullName>
    <description>Hiển thị Email ID của người tạo Interaction
Trường tạo mới để đáp ứng hiển thị trên giao diện và listview</description>
    <formula>IF(
OR(
TRIM(LOWER(CreatedBy.LastName)) = &quot;platform integration user&quot;,
TRIM(LOWER(CreatedBy.Alias)) = &quot;platint&quot;
),
&quot;system&quot;,
IF(
RecordType.Name = &quot;Interaction&quot;,
LEFT(CreatedBy.Email, FIND(&quot;@&quot;, CreatedBy.Email) - 1),
&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Created By</label>
    <type>Text</type>
</CustomField>