force-app/main/default/objects/Case/fields/FEC_Created_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Created_On__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>