force-app/main/default/objects/Case/fields/FEC_CS_Check_Block_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_Check_Block_Limit_Amount__c</fullName>
    <description>Giá trị hạn mức bị chặn</description>
    <label>CS Check - Block Limit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>