force-app/main/default/objects/Case/fields/FEC_CS_Check_Block_Limit_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_Check_Block_Limit_Date__c</fullName>
    <description>Ngày áp dụng chặn hạn mức</description>
    <label>CS Check - Block Limit Date</label>
    <type>Date</type>
</CustomField>