force-app/main/default/objects/Case/fields/FEC_CS_Check_Classification_by_CS__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_Check_Classification_by_CS__c</fullName>
    <label>CS Check - Classification by CS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS đã xử lý_Sales kiểm tra nội bộ</fullName>
            </value>
            <value>
                <fullName>CS chuyển Sales xử lý</fullName>
            </value>
            <value>
                <fullName>CS tự xử lý_Không chuyển Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>