force-app/main/default/objects/Case/fields/FEC_CS_Check_Evaluation_by_CS__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_Check_Evaluation_by_CS__c</fullName>
    <description>Đánh giá của CS sau khi xem xét case</description>
    <label>CS Check - Evaluation by CS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Khiếu nại đúng</fullName>
            </value>
            <value>
                <fullName>Khiếu nại sai</fullName>
            </value>
            <value>
                <fullName>Chưa xác định</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>