force-app/main/default/objects/Case/fields/FEC_CS_Check_Final_Product__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_Check_Final_Product__c</fullName>
    <description>Sản phẩm cuối cùng liên quan đến case sau khi CS xác định</description>
    <label>CS Check - Final Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Banca</fullName>
            </value>
            <value>
                <fullName>DC3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>