force-app/main/default/objects/Case/fields/FEC_CS_Customer_Care_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_Customer_Care_Assessment_Type__c</fullName>
    <description>CS Customer Care đánh giá yêu cầu cho case</description>
    <label>CS Customer Care Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Assessment_Type</valueSetName>
    </valueSet>
</CustomField>