force-app/main/default/objects/Case/fields/FEC_CS_D2C_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_D2C_Assessment_Type__c</fullName>
    <description>CS D2C đánh giá yêu cầu</description>
    <label>CS D2C Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Assessment_Type</valueSetName>
    </valueSet>
</CustomField>