force-app/main/default/objects/Case/fields/FEC_CS_D2C_Required_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_D2C_Required_Corrective_Action__c</fullName>
    <description>Hành động cần thiết</description>
    <label>CS D2C Required Corrective Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Corrective_Action</valueSetName>
    </valueSet>
</CustomField>