force-app/main/default/objects/Case/fields/FEC_CS_D2C_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_D2C_Risk_Level__c</fullName>
    <description>Mức độ rủi ro</description>
    <label>CS D2C Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Risk_Level</valueSetName>
    </valueSet>
</CustomField>