force-app/main/default/objects/Case/fields/FEC_CS_Support__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CS Support</label>
    <type>Checkbox</type>
</CustomField>