force-app/main/default/objects/Case/fields/FEC_Current_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Card_Status__c</fullName>
    <description>Trường tự động hiển thị tình trạng thẻ hiện tại</description>
    <label>Current Card Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>