force-app/main/default/objects/Case/fields/FEC_Current_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Case_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stage hiện tại của Case trong quy trình xử lý tương ứng</description>
    <label>Current Case Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>