force-app/main/default/objects/Case/fields/FEC_Customer_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Confirmation__c</fullName>
    <label>Customer Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer received MRC</fullName>
            </value>
            <value>
                <fullName>Customer has not received MRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>