force-app/main/default/objects/Case/fields/FEC_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>