force-app/main/default/objects/Case/fields/FEC_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Type__c</fullName>
    <description>Loại KH
Trường thông tin hiển thị tại section Case Info Fix/C360</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Type</valueSetName>
    </valueSet>
</CustomField>