force-app/main/default/objects/Case/fields/FEC_Customer_Username__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Username__c</fullName>
    <description>Tên Nickname của khách hàng dã dùng để chat với FE</description>
    <label>Customer Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>