force-app/main/default/objects/Case/fields/FEC_Delay_Note__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delay_Note__c</fullName>
    <description>Nội dung chậm trễ khi vận chuyển thẻ cho khách hàng</description>
    <label>Delay Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>