force-app/main/default/objects/Case/fields/FEC_Delivery_Option_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delivery_Option_2__c</fullName>
    <description>Cho phép chọn tối đâ 2 giá trị: Email + Địa chỉ hoặc Email + Văn phòng</description>
    <label>Delivery Option 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>RL05_POS</fullName>
                <label>POS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>