force-app/main/default/objects/Case/fields/FEC_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delivery_Status__c</fullName>
    <description>Trạng thái vận chuyển thẻ của khách hàng</description>
    <label>Delivery Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>