force-app/main/default/objects/Case/fields/FEC_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Disbursement_Date__c</fullName>
    <label>Disbursement Date</label>
    <type>Date</type>
</CustomField>