force-app/main/default/objects/Case/fields/FEC_Disbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Disbursement_Status__c</fullName>
    <label>Disbursement Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>