force-app/main/default/objects/Case/fields/FEC_Draft_Remarks__c.field-meta.xml
<CustomField>
    <fullName>FEC_Draft_Remarks__c</fullName>
    <description>Trường tạo để lưu các giá trị Remark trên Case mà user nhập -&gt; chọn save &amp;close chứ chưa submit</description>
    <label>Draft Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>