force-app/main/default/objects/Case/fields/FEC_Draft_Routing_Action_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Draft_Routing_Action_Code__c</fullName>
    <description>Mã Routing Action đã chọn khi Save &amp; Close (draft), ví dụ: Escalate, Route to, Resolve.</description>
    <label>Draft Routing Action Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>