force-app/main/default/objects/Case/fields/FEC_Email_C__c.field-meta.xml
<CustomField>
    <fullName>FEC_Email_C__c</fullName>
    <label>CC Email</label>
    <type>Email</type>
</CustomField>