force-app/main/default/objects/Case/fields/FEC_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>FEC_Email_CC__c</fullName>
    <label>Email - CC</label>
    <type>Email</type>
</CustomField>