force-app/main/default/objects/Case/fields/FEC_Email_From__c.field-meta.xml
<CustomField>
    <fullName>FEC_Email_From__c</fullName>
    <label>Email - From</label>
    <type>Email</type>
</CustomField>