force-app/main/default/objects/Case/fields/FEC_EmailFrom__c.field-meta.xml
<CustomField>
    <fullName>FEC_EmailFrom__c</fullName>
    <label>From Email</label>
    <type>Email</type>
</CustomField>