force-app/main/default/objects/Case/fields/FEC_EMI__c.field-meta.xml
<CustomField>
    <fullName>FEC_EMI__c</fullName>
    <description>Service API GetIPPDetails trả về dữ liệu EMI cho khoản IPP. User không thể thao tác thay đổi field.</description>
    <label>EMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>