force-app/main/default/objects/Case/fields/FEC_External_Interaction_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_External_Interaction_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Interaction ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>