force-app/main/default/objects/Case/fields/FEC_FCR__c.field-meta.xml
<CustomField>
    <fullName>FEC_FCR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hiển thị Case FCR</description>
    <label>FCR</label>
    <type>Checkbox</type>
</CustomField>