force-app/main/default/objects/Case/fields/FEC_Final_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Final_Status__c</fullName>
    <description>Trường final status chung của case và interaction được cập nhật khi trạng thái status chung hoặc người phụ trách có thay đổi</description>
    <formula>IF (NOT(ISBLANK(ArchiveStatus__c)), ArchiveStatus__c, 
    IF(
        ISPICKVAL(Status, &quot;Pending&quot;),
        &quot;Pending - &quot; &amp; FEC_Team__c,
        TEXT(Status)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>