force-app/main/default/objects/Case/fields/FEC_First_Access__c.field-meta.xml
<CustomField>
    <fullName>FEC_First_Access__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Kiểm tra có phải lần đầu Case được Access hay không</description>
    <label>First Access</label>
    <type>Checkbox</type>
</CustomField>