force-app/main/default/objects/Case/fields/FEC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_First_Name__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>