force-app/main/default/objects/Case/fields/FEC_Follow_Up_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_Follow_Up_User__c</fullName>
    <label>Follow-Up User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>