force-app/main/default/objects/Case/fields/FEC_Full_Remarks__c.field-meta.xml
<CustomField>
    <fullName>FEC_Full_Remarks__c</fullName>
    <label>Full Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>