force-app/main/default/objects/Case/fields/FEC_Gender__c.field-meta.xml
<CustomField>
    <fullName>FEC_Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>