force-app/main/default/objects/Case/fields/FEC_Genesys_Campaign__c.field-meta.xml
<CustomField>
    <fullName>FEC_Genesys_Campaign__c</fullName>
    <description>Thông tin Campaign do Genesys trả về</description>
    <label>Genesys Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>