force-app/main/default/objects/Case/fields/FEC_Genesys_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Genesys_Campaign_Name__c</fullName>
    <label>Genesys Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>