force-app/main/default/objects/Case/fields/FEC_Genesys_Interaction_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Genesys_Interaction_ID__c</fullName>
    <description>Thông tin ID của Genesys Interaction được đồng bộ về từ Genesys</description>
    <label>Genesys Interaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>