force-app/main/default/objects/Case/fields/FEC_Get_Next_Work__c.field-meta.xml
<CustomField>
    <fullName>FEC_Get_Next_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get_Next_Work</label>
    <type>Checkbox</type>
</CustomField>