force-app/main/default/objects/Case/fields/FEC_Global_Search__c.field-meta.xml
<CustomField>
    <fullName>FEC_Global_Search__c</fullName>
    <label>Global Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>