force-app/main/default/objects/Case/fields/FEC_Has_Account_or_Contract__c.field-meta.xml
<CustomField>
    <fullName>FEC_Has_Account_or_Contract__c</fullName>
    <formula>NOT(ISBLANK(FEC_Account_or_Contract__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Account or Contract</label>
    <type>Checkbox</type>
</CustomField>