force-app/main/default/objects/Case/fields/FEC_Hidden_SLA_Fomular__c.field-meta.xml
<CustomField>
    <fullName>FEC_Hidden_SLA_Fomular__c</fullName>
    <formula>OR(
    FEC_SubCode__r.FEC_Code__c  = &quot;ITL01.03&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITC01.03&quot;,
    FEC_SubCode__r.FEC_Code__c= &quot;ITL01.01&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITC01.01&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITL01.04&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITC01.04&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITL01.02&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITL02.01&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITL02.02&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITL02.03&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITC01.02&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITC02.01&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITC02.02&quot;,
    FEC_SubCode__r.FEC_Code__c = &quot;ITC02.03&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden SLA Fomular</label>
    <type>Checkbox</type>
</CustomField>