force-app/main/default/objects/Case/fields/FEC_Hold_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Hold_Case_Type__c</fullName>
    <label>Hold Case Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>