force-app/main/default/objects/Case/fields/FEC_ID_Search__c.field-meta.xml
<CustomField>
    <fullName>FEC_ID_Search__c</fullName>
    <description>Trường thông tin hứng giá trị ID của Case/Interaction gen ra từ apex code. sau đó sẽ được dùng để tạo ra trường ID hypelink</description>
    <externalId>true</externalId>
    <label>ID (Search)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>