force-app/main/default/objects/Case/fields/FEC_Incorrect_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Incorrect_Contract_Number__c</fullName>
    <description>Trường cho phép user nhập số HĐ sai và hệ thống sẽ hiển thị dropdown list của các số HĐ liên quan cho user chọn. Sau khi chọn sẽ trả về payment history tương ứng với số HĐ đó</description>
    <label>Incorrect Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>