force-app/main/default/objects/Case/fields/FEC_Incorrect_Payment_Adj_Rows__c.field-meta.xml
<CustomField>
    <fullName>FEC_Incorrect_Payment_Adj_Rows__c</fullName>
    <description>JSON array of incorrect-payment adjustment rows (correctContract, adjustedAmount). Row 1 is also on FEC_Correct_Contract_Number__c / FEC_Adjusted_Amount__c.</description>
    <label>Incorrect Payment Adjustment Rows</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>