force-app/main/default/objects/Case/fields/FEC_Input_Correct_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Input_Correct_Contract_Number__c</fullName>
    <description>Người dùng nhập tay thủ công số HĐ đúng nằm ngoài danh sách được lưu trong hệ thống</description>
    <label>Input Correct Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>