force-app/main/default/objects/Case/fields/FEC_Interaction__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Trường lookup hiển thị Interaction sinh ra Case</description>
    <label>Interaction ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Interaction)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>