force-app/main/default/objects/Case/fields/FEC_Interaction_Duration__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Duration__c</fullName>
    <description>Khoảng thời gian diễn ra tương tác</description>
    <label>Interaction Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>