force-app/main/default/objects/Case/fields/FEC_Interaction_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Email__c</fullName>
    <label>Interaction Email</label>
    <type>Email</type>
</CustomField>