force-app/main/default/objects/Case/fields/FEC_Interaction_End_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_End_On__c</fullName>
    <description>Thời điểm tương tác kết thúc</description>
    <label>Interaction End On</label>
    <type>DateTime</type>
</CustomField>