force-app/main/default/objects/Case/fields/FEC_Interaction_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_ID__c</fullName>
    <description>Trường thông tin trạng thái Case lấy theo ID để phục vụ hiển thị ở giao diện Case theo yêu cầu FEC</description>
    <formula>IF(
  RecordType.Name = &apos;Interaction&apos;,
  HYPERLINK(&quot;/&quot; &amp; Id, FEC_ID_Search__c, &quot;_self&quot;),
  IF(
    FEC_Interaction__c &lt;&gt; null,
    HYPERLINK(&quot;/&quot; &amp; FEC_Interaction__r.Id, FEC_Interaction__r.FEC_ID_Search__c, &quot;_self&quot;),
    IF(
      NOT(ISBLANK(ArchiveInteractionId__c)),
      HYPERLINK(&quot;/apex/ArchiveInteractionCaseRedirect?id=&quot; &amp; Id, ArchiveInteractionId__c, &quot;_self&quot;),
      &apos;&apos;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction ID</label>
    <type>Text</type>
</CustomField>