force-app/main/default/objects/Case/fields/FEC_Interaction_ID_Report__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_ID_Report__c</fullName>
    <description>Trường Interaction ID tạo mới phục vụ report (không phải dạng hyperlink)</description>
    <formula>IF( RecordType.Name = &apos;Interaction&apos;, FEC_ID_Search__c,
IF( FEC_Interaction__c &lt;&gt; null, FEC_Interaction__r.FEC_ID_Search__c, &apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction ID (Report)</label>
    <type>Text</type>
</CustomField>