force-app/main/default/objects/Case/fields/FEC_Interaction_Masked_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Masked_Email__c</fullName>
    <formula>IF(
    ISBLANK( FEC_Interaction_Email__c ),
    &quot;&quot;,
    LEFT(FEC_Interaction_Email__c , 2)
    &amp; &quot;****&quot;
    &amp; MID(
        FEC_Interaction_Email__c ,
        FIND(&quot;@&quot;, FEC_Interaction_Email__c ) - 2,
        2
    )
    &amp; &quot;@&quot;
    &amp; RIGHT(
        FEC_Interaction_Email__c ,
        LEN(FEC_Interaction_Email__c ) - FIND(&quot;@&quot;, FEC_Interaction_Email__c )
    )
)</formula>
    <label>Interaction Email (Delete)</label>
    <type>Text</type>
</CustomField>