force-app/main/default/objects/Case/fields/FEC_Interaction_Masked_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Masked_Phone__c</fullName>
    <formula>IF(
    ISBLANK( FEC_Phone_Number__c ),
    &quot;&quot;,
    LEFT(FEC_Phone_Number__c , 4)
    &amp; &quot;***&quot;
    &amp; RIGHT(FEC_Phone_Number__c , 3)
)</formula>
    <label>Interaction Phone</label>
    <type>Text</type>
</CustomField>