force-app/main/default/objects/Case/fields/FEC_Interaction_Outcome_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Outcome_Status__c</fullName>
    <label>Interaction Outcome Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Incorrect number</fullName>
            </value>
            <value>
                <fullName>Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>