force-app/main/default/objects/Case/fields/FEC_Interaction_Owner__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Owner__c</fullName>
    <description>email của chủ sở hữu (bỏ đuôi) hoặc tên Queue nếu người sở hữu Interaction là Queue</description>
    <formula>IF( RecordType.Name = &apos;Interaction&apos;,(IF(ISBLANK(Owner:Queue.Id),
LEFT(Owner:User.Email,FIND(&quot;@&quot;, Owner:User.Email) - 1),
Owner:Queue.Name)),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Owner</label>
    <type>Text</type>
</CustomField>