force-app/main/default/objects/Case/fields/FEC_Interaction_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Product_Type__c</fullName>
    <label>Product Type (delete)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Ubank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>