force-app/main/default/objects/Case/fields/FEC_Interaction_Remarks__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Remarks__c</fullName>
    <description>Ghi chú nhập trên Interaction khi User thực hiện wrap-up</description>
    <label>Interaction Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>