force-app/main/default/objects/Case/fields/FEC_Interaction_Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Người thực hiện đóng Interaction</description>
    <label>Interaction Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>