force-app/main/default/objects/Case/fields/FEC_Interaction_Start_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Start_On__c</fullName>
    <description>Thời điểm tương tác bắt đầu</description>
    <label>Interaction Start On</label>
    <type>DateTime</type>
</CustomField>