force-app/main/default/objects/Case/fields/FEC_Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Status__c</fullName>
    <description>Trường thông tin trạng thái Case lấy theo Final status để phục vụ hiển thị ở giao diện Case theo yêu cầu FEC</description>
    <formula>IF( RecordType.Name = &apos;Interaction&apos; ,  FEC_Final_Status__c  , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Status</label>
    <type>Text</type>
</CustomField>