force-app/main/default/objects/Case/fields/FEC_Interaction_Subchannel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_Subchannel__c</fullName>
    <description>Kênh tương tác phụ</description>
    <label>Interaction Sub Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>