force-app/main/default/objects/Case/fields/FEC_Interaction_View_Mode__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction_View_Mode__c</fullName>
    <label>FEC Interaction View Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>handling</fullName>
                <default>true</default>
                <label>handling</label>
            </value>
            <value>
                <fullName>review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>