force-app/main/default/objects/Case/fields/FEC_IPP_Interest__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Interest__c</fullName>
    <description>Servie API GetIPPDetails tự động điền lãi suất của khoản IPP. User không thể điều chỉnh</description>
    <label>Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>